--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "mysql": "Server=localhost;Database=minimal-api;Uid=root;Pwd=C3e0p9o4@;"
+  }
 }
